# WeboveAplikacieBackend

./: README.md  dockerfile  pyproject.toml
src/: main.py  schema.py
