[project]
name = "wab.hello-world"
version = "1.0.0"
description = "Simple Hello world service"
authors = [
    {name = "MZ", email = "mariozah21@gmail.com"},
]
dependencies = [
    "fastapi>=0.103.2",
    "standard>=1.0.3",
    "uvicorn[standard]>=0.23.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "uvicorn main:app -- reload"
test = "pytest"