[project]
name = ""
version = ""
description = ""
authors = [
    {name = "MZ", email = "mariozah21@gmail.com"},
]
dependencies = [
    "fastapi>=0.103.2",
    "uvicorn[standard]>=0.23.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "uvicorn src.main:app --port 8080 --reload"
test = "pytest"

